2019-04-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Draw parentheses instead of using scaled symbols from font

2019-04-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* New icon

2019-04-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Minimal window mode (hide everything except the expression entry and, when not empty, the result display)

2019-04-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Persistent keypad option (makes it possible to show keypad and history simultaneously)

2019-03-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix custom expression font with themes other than Adwaita, Yaru, and Ooxmox

2019-03-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Make spacing between UI elements more consistent

2019-03-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Report bug menu item

2019-03-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Optional (at compile time; default off) internal help viewer using WebKitGTK

2019-02-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improve appearance on Ubuntu 16.04 (fix missing icon on edit register button and disable vertically linked buttons for incompatible themes)

2019-02-26 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix initial keyboard shortcuts on first run

2019-02-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix initial window title (use "Qalculate!" instead of "qalculate-gtk")

2019-02-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Floating point conversion dialog

2019-02-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to enable/disable new version notification

2019-02-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* binary16/fp16, binary32/fp32/float, binary64/fp64/double, and binary128/fp128 "to" conversion
	* Support specification of number of bits for binary "to" conversion (4 to bin16 = 0000 0000 0000 0100)

2019-01-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Configurable keyboard shortcuts
