@@ -1,385 +1,0 @@
-/* XPM */
-static char * icon_xpm[] = {
-"64 64 318 2",
-"  	c None",
-". 	c #DC55B8",
-"+ 	c #E478C7",
-"@ 	c #E26FC3",
-"# 	c #D11DA1",
-"$ 	c #D634AB",
-"% 	c #E57FCA",
-"& 	c #E47BC8",
-"* 	c #DD57B9",
-"= 	c #E26EC3",
-"- 	c #DA4BB4",
-"; 	c #D11FA2",
-"> 	c #D221A3",
-", 	c #D220A2",
-"' 	c #D944B1",
-") 	c #D943B1",
-"! 	c #E16DC2",
-"~ 	c #D636AB",
-"{ 	c #D73BAD",
-"] 	c #D223A4",
-"^ 	c #D841B0",
-"/ 	c #D531A9",
-"( 	c #D023A2",
-"_ 	c #DC72C0",
-": 	c #E068C0",
-"< 	c #D34CAF",
-"[ 	c #B26E9F",
-"} 	c #DA47B3",
-"| 	c #CC2BA2",
-"1 	c #916A87",
-"2 	c #D328A6",
-"3 	c #D22DA6",
-"4 	c #816379",
-"5 	c #626262",
-"6 	c #D328A5",
-"7 	c #D02CA5",
-"8 	c #6C4A63",
-"9 	c #363636",
-"0 	c #D942B1",
-"a 	c #CA269F",
-"b 	c #4C3445",
-"c 	c #121212",
-"d 	c #C14CA2",
-"e 	c #201A1E",
-"f 	c #131313",
-"g 	c #AEAEAE",
-"h 	c #923A7A",
-"i 	c #000000",
-"j 	c #DB50B6",
-"k 	c #D225A4",
-"l 	c #C8259C",
-"m 	c #C02E98",
-"n 	c #B15D9B",
-"o 	c #AB5795",
-"p 	c #AD5195",
-"q 	c #BE1B92",
-"r 	c #C7249B",
-"s 	c #D126A3",
-"t 	c #D01EA1",
-"u 	c #3D363B",
-"v 	c #0D0D0D",
-"w 	c #DC52B7",
-"x 	c #CE23A1",
-"y 	c #A8368A",
-"z 	c #5E3B54",
-"A 	c #282828",
-"B 	c #030303",
-"C 	c #040404",
-"D 	c #252525",
-"E 	c #53384C",
-"F 	c #A23886",
-"G 	c #CC249F",
-"H 	c #AB4991",
-"I 	c #424242",
-"J 	c #D73AAD",
-"K 	c #C43BA0",
-"L 	c #5C3C53",
-"M 	c #0B0B0B",
-"N 	c #060606",
-"O 	c #42273A",
-"P 	c #B63C95",
-"Q 	c #CC259F",
-"R 	c #3C2837",
-"S 	c #D222A3",
-"T 	c #C739A1",
-"U 	c #322A30",
-"V 	c #010101",
-"W 	c #0A0A0A",
-"X 	c #0C0C0C",
-"Y 	c #1A1A1A",
-"Z 	c #676767",
-"` 	c #636363",
-" .	c #565656",
-"..	c #1D161B",
-"+.	c #A92B88",
-"@.	c #905280",
-"#.	c #020202",
-"$.	c #D83EAF",
-"%.	c #C33D9F",
-"&.	c #080808",
-"*.	c #2E2E2E",
-"=.	c #D348AD",
-"-.	c #C1309A",
-";.	c #1E191D",
-">.	c #4C4C4C",
-",.	c #D52FA9",
-"'.	c #D026A3",
-").	c #5F4157",
-"!.	c #292929",
-"~.	c #49213E",
-"{.	c #AE4090",
-"].	c #0E0E0E",
-"^.	c #DB4FB6",
-"/.	c #833D71",
-"(.	c #757575",
-"_.	c #D127A3",
-":.	c #57394F",
-"<.	c #2C2C2C",
-"[.	c #D533AA",
-"}.	c #AF378F",
-"|.	c #1B1B1B",
-"1.	c #DF60BD",
-"2.	c #C22297",
-"3.	c #CB2EA1",
-"4.	c #150912",
-"5.	c #A5408A",
-"6.	c #3B3B3B",
-"7.	c #DF63BE",
-"8.	c #321E2D",
-"9.	c #555555",
-"0.	c #792964",
-"a.	c #574352",
-"b.	c #2D2D2D",
-"c.	c #59344F",
-"d.	c #090909",
-"e.	c #6B2C5A",
-"f.	c #171717",
-"g.	c #404040",
-"h.	c #D52EA8",
-"i.	c #741059",
-"j.	c #343434",
-"k.	c #D42AA7",
-"l.	c #8B2871",
-"m.	c #DC56B8",
-"n.	c #262626",
-"o.	c #D326A5",
-"p.	c #99367F",
-"q.	c #D945B2",
-"r.	c #494949",
-"s.	c #D42CA7",
-"t.	c #86226B",
-"u.	c #4E3F4A",
-"v.	c #D52FA8",
-"w.	c #64144F",
-"x.	c #6C4462",
-"y.	c #8B3B75",
-"z.	c #E373C5",
-"A.	c #523E4D",
-"B.	c #1E1E1E",
-"C.	c #B23791",
-"D.	c #D532AA",
-"E.	c #E683CB",
-"F.	c #E57EC9",
-"G.	c #281423",
-"H.	c #DB4CB5",
-"I.	c #C5269B",
-"J.	c #D327A5",
-"K.	c #D738AC",
-"L.	c #D42DA8",
-"M.	c #C639A0",
-"N.	c #130C11",
-"O.	c #D945B1",
-"P.	c #D120A2",
-"Q.	c #5B2C4F",
-"R.	c #4A4A4A",
-"S.	c #E57DC9",
-"T.	c #D121A2",
-"U.	c #C53BA0",
-"V.	c #D637AC",
-"W.	c #A12A82",
-"X.	c #AE4D94",
-"Y.	c #2A2A2A",
-"Z.	c #D83FAF",
-"`.	c #CE42A9",
-" +	c #B77FA8",
-".+	c #DC54B8",
-"++	c #7A4B6E",
-"@+	c #D842B0",
-"#+	c #D22FA7",
-"$+	c #55324B",
-"%+	c #C45AA8",
-"&+	c #D02FA5",
-"*+	c #CF21A1",
-"=+	c #3D1A34",
-"-+	c #272727",
-";+	c #C1399D",
-">+	c #262125",
-",+	c #050505",
-"'+	c #D73CAE",
-")+	c #B62990",
-"!+	c #B64097",
-"~+	c #1D1D1D",
-"{+	c #4F4F4F",
-"]+	c #E47DC9",
-"^+	c #D840B0",
-"/+	c #7B3167",
-"(+	c #7F7F7F",
-"_+	c #C446A2",
-":+	c #46233D",
-"<+	c #CD58AE",
-"[+	c #C92D9F",
-"}+	c #2E2A2D",
-"|+	c #AB5493",
-"1+	c #76526C",
-"2+	c #C56DAD",
-"3+	c #9A5988",
-"4+	c #CD32A4",
-"5+	c #D639AC",
-"6+	c #D11EA1",
-"7+	c #D947B2",
-"8+	c #D223A3",
-"9+	c #CF34A5",
-"0+	c #434343",
-"a+	c #7E3C6C",
-"b+	c #161616",
-"c+	c #E788CE",
-"d+	c #B04093",
-"e+	c #D739AC",
-"f+	c #C72E9F",
-"g+	c #362932",
-"h+	c #1C1C1C",
-"i+	c #DA4AB4",
-"j+	c #CC219E",
-"k+	c #854A76",
-"l+	c #111111",
-"m+	c #585858",
-"n+	c #D122A3",
-"o+	c #B53492",
-"p+	c #3C383B",
-"q+	c #3A3A3A",
-"r+	c #DA47B2",
-"s+	c #CD229F",
-"t+	c #855077",
-"u+	c #352F34",
-"v+	c #E377C7",
-"w+	c #D226A5",
-"x+	c #C1369C",
-"y+	c #BA72A7",
-"z+	c #D845B0",
-"A+	c #EEC7E4",
-"B+	c #E78DD0",
-"C+	c #CC3CA6",
-"D+	c #D11FA1",
-"E+	c #CF25A2",
-"F+	c #55364D",
-"G+	c #7C7C7C",
-"H+	c #AB6B9A",
-"I+	c #B24C97",
-"J+	c #CE28A1",
-"K+	c #C22D9B",
-"L+	c #955384",
-"M+	c #793667",
-"N+	c #CC40A7",
-"O+	c #AC3F8F",
-"P+	c #070707",
-"Q+	c #232323",
-"R+	c #573C50",
-"S+	c #6B3E5F",
-"T+	c #972D7B",
-"U+	c #BE429C",
-"V+	c #CE4BAB",
-"W+	c #AF338E",
-"X+	c #873F73",
-"Y+	c #4C1F40",
-"Z+	c #211C20",
-"`+	c #453641",
-" @	c #B62A92",
-".@	c #4B3746",
-"+@	c #222222",
-"@@	c #717171",
-"#@	c #151515",
-"$@	c #240D1D",
-"%@	c #483142",
-"&@	c #695363",
-"*@	c #76185C",
-"=@	c #801964",
-"-@	c #9B3580",
-";@	c #7E1863",
-">@	c #76105B",
-",@	c #70596A",
-"'@	c #584051",
-")@	c #341C2D",
-"!@	c #191618",
-"~@	c #160C13",
-"{@	c #994E85",
-"]@	c #B14394",
-"^@	c #0F0F0F",
-"/@	c #AD95A7",
-"(@	c #CF3BA8",
-"_@	c #D21FA2",
-":@	c #493744",
-"<@	c #353535",
-"[@	c #575757",
-"}@	c #D967BA",
-"|@	c #D231A8",
-"1@	c #A8428C",
-"2@	c #101010",
-"3@	c #333333",
-"4@	c #CC43A8",
-"5@	c #D02AA4",
-"6@	c #4A3043",
-"7@	c #3D3D3D",
-"8@	c #DB9DCA",
-"9@	c #CE4AAA",
-"0@	c #A8418C",
-"a@	c #AA5594",
-"b@	c #51384A",
-"c@	c #383838",
-"                                                                                                                                ",
-"                                                . + @ # # # # $ % & *                                                           ",
-"                                      = - ; > # # # # # # # # # # # # # , ; ' )                                                 ",
-"                                ! * # # # # # # # # # # # # # # # # # # # # # # # ~ =                                           ",
-"                            & { # # # # # # # # # # # # # # # # # # # # # # # # # # # ] ^                                       ",
-"                          / # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # ( _                                   ",
-"                      : # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # < [                               ",
-"                    } # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # | 1                             ",
-"                  2 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 3 4 5                         ",
-"                6 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 7 8 9                       ",
-"              0 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # a b c                     ",
-"            - # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # d e f g                 ",
-"            # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # h i c                 ",
-"          j # # # # # # # # # # # # # # # # # # # k l m n o p q r s # # # # # # # # # # # # # # # # # # # t u i v               ",
-"        w # # # # # # # # # # # # # # # # # # x y z A B i i i C D E F G # # # # # # # # # # # # # # # # # # H C i I             ",
-"        J # # # # # # # # # # # # # # # # # K L M i i i i i i i i i N O P # # # # # # # # # # # # # # # # # Q R i i I           ",
-"        S # # # # # # # # # # # # # # # # T U V i i i i i i W X Y Z `  ...+.# # # # # # # # # # # # # # # # # @.i i #.          ",
-"      $.# # # # # # # # # # # # # # # # %.U i i i i i i &.*.                =.# # # # # # # # # # # # # # # # -.;.i i >.        ",
-"      ,.# # # # # # # # # # # # # # # '.).V i i i i i !.                      2 # # # # # # # # # # # # # # # # ~.i i M         ",
-"      # # # # # # # # # # # # # # # # {.].i i i i i D                         ^.# # # # # # # # # # # # # # # # /.i i i (.      ",
-"    ^ # # # # # # # # # # # # # # # _.:.i i i i i <.                            [.# # # # # # # # # # # # # # # }.X i i |.      ",
-"    1.# # # # # # # # # # # # # # # 2.Y i i i i M                               ,.# # # # # # # # # # # # # # # 3.4.i i i       ",
-"    # # # # # # # # # # # # # # # # 5.i i i i i 6.                              7.# # # # # # # # # # # # # # # # 8.i i i 9.    ",
-"    # # # # # # # # # # # # # # # # 0.i i i i X                                   # # # # # # # # # # # # # # # # a.i i i b.    ",
-"    # # # # # # # # # # # # # # # # c.i i i i d.                                  ; # # # # # # # # # # # # # # # e.i i i f.    ",
-"    # # # # # # # # # # # # # # # # >.i i i i g.                                  h.# # # # # # # # # # # # # # # i.i i i i     ",
-"  ' # # # # # # # # # # # # # # # # *.i i i i j.                                  k.# # # # # # # # # # # # # # # l.i i i i     ",
-"  m.# # # # # # # # # # # # # # # # n.i i i i                                     o.# # # # # # # # # # # # # # # p.i i i i     ",
-"  m.# # # # # # # # # # # # # # # # n.i i i i                                     o.# # # # # # # # # # # # # # # p.i i i i i   ",
-"  m.# # # # # # # # # # # # # # # # n.i i i i                                     o.# # # # # # # # # # # # # # # p.i i i i D   ",
-"  m.# # # # # # # # # # # # # # # # n.i i i i                                     o.# # # # # # # # # # # # # # # p.i i i i 9   ",
-"  q.# # # # # # # # # # # # # # # # r.i i i i                                     s.# # # # # # # # # # # # # # # t.i i i i 9   ",
-"    # # # # # # # # # # # # # # # # u.i i i i                                     v.# # # # # # # # # # # # # # # i.i i i i 9   ",
-"    # # # # # # # # # # # # # # # # w.i i i i                                     S # # # # # # # # # # # # # # # x.i i i i 9   ",
-"    # # # # # # # # # # # # # # # # y.i i i i             z.                      # # # # # # # # # # # # # # # # A.i i i i B.  ",
-"    # # # # # # # # # # # # # # # # C.#.i i i           . # # D.E.              F.# # # # # # # # # # # # # # # # G.i i i i i   ",
-"    H.# # # # # # # # # # # # # # # I.n.i i i           J.# # # # K.w           L.# # # # # # # # # # # # # # # M.N.i i i i     ",
-"    O.# # # # # # # # # # # # # # # P.Q.i i i R.      S.# # # # # # T.U.        V.# # # # # # # # # # # # # # # W.&.i i i i     ",
-"      # # # # # # # # # # # # # # # # X.X i i Y.      Z.# # # # # # # # `. +  .+# # # # # # # # # # # # # # # # ++i i i i i     ",
-"      @+# # # # # # # # # # # # # # # #+$+i i v     : # # # # # # # # # # # %+&+# # # # # # # # # # # # # # # *+=+i i i i -+    ",
-"      * # # # # # # # # # # # # # # # # ;+>+i ,+      & '+# # # # # # # # # # # # # # # # # # # # # # # # # # )+f i i i i B.    ",
-"        # # # # # # # # # # # # # # # # # !+~+i {+        ]+^+# # # # # # # # # # # # # # # # # # # # # # # # /+i i i i i (+    ",
-"        $ # # # # # # # # # # # # # # # # # _+:+|.            <+t # # # # # # # # # # # # # # # # # # # # # [+}+i i i i N       ",
-"          , # # # # # # # # # # # # # # # # # 3 |+1+            2+T.# # # # # # # # # # # # # # # # # # # # 3+i i i i i f.      ",
-"          V.# # # # # # # # # # # # # # # # # # # # 4+5+> # 6+,.7+8+# # # # # # # # # # # # # # # # # # # 9+Y.i i i i i 0+      ",
-"            # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # a+i i i i i b+        ",
-"            c+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # d+].i i i i i (.        ",
-"              e+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # f+g+i i i i i h+          ",
-"                i+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # j+k+l+i i i i m+          ",
-"                  - # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # n+o+p+V i q+            ",
-"                    r+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # s+t+u+              ",
-"                      v+w+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # x+y+            ",
-"                          z+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # T A+        ",
-"                            B+C+D+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # E+F+G+      ",
-"                                H+I+J+# # # # # # # # # # # # # # # # # # # # # # K+L+M+N+# # # # # # # # # # # # # O+P+i Q+`   ",
-"                                    R+S+T+U+# # # # # # # # # # # # # # # V+W+X+Y+Z+i #.`+ @# # # # # # # # # # # # .@i i i i +@",
-"                                      @@A #@$@%@&@*@=@-@-@-@-@-@;@>@,@'@)@!@v i i i i i i ~@{@# # # # # # # # # # ]@B i i i i W ",
-"                                            r.^@i i i V V V V V i i i i i i i i i i i i i i Y /@(@_@# # # # # # ( :@i i i i i q+",
-"                                                  A <@i i i i i i i i i i i i i i i q+-+[@        }@|@# # # # # 1@W i i i i i   ",
-"                                                            l+2@3@3@3@3@3@].i                         4@# # # 5@6@i i i i i 7@  ",
-"                                                                                                        8@9@# 0@d.i i i i P+    ",
-"                                                                                                            a@b@i i i i i I     ",
-"                                                                                                                A i i i 2@      ",
-"                                                                                                                    c@i g.      "};
