@@ -1,3 +1,8 @@
+2019-04-22 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Reduce distance between base and exponent in result
+	* Ellipsize long variable values used as title in completion popup (fixes segfault)
+
 2019-04-20 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Draw parentheses instead of using scaled symbols from font
